# Susuwatari

./: Cargo.toml  README.md  shell.nix  susuwatari.project
.xwin-cache/unpack/Win11SDK_10.0.22621_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_libs_x86_64.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_store_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.22621_store_libs.msi/: tree.txt
src/: main.rs
