[package]
name = "susuwatari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev =  { version = "0.5.3", features = ["unstable_grab"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-process = "0.2.5"
arboard = "3.4.0"